No patient if  there are no patients

--- a/lab/templates/lab/partials/form_send_micro_pic_partial.html
+++ b/lab/templates/lab/partials/form_send_micro_pic_partial.html
@@ -26,6 +26,8 @@
                          {{ patient.cpf }}
                       </li>
                   {% endfor %}
+                {% else %}
+                <p>Não existe nenhum paciente cadastrado</p>
                  
                 {% endif %}
               </ul>
