--- a/base_templates/global/partials/search_report.html
+++ b/base_templates/global/partials/search_report.html
@@ -16,6 +16,7 @@
     <div class="search-sec-box-report">
         <div class="date-box">
             <form action="{% url 'lab:report_search' %}" method="GET" class="date-search-form">
+                <label for="search_date">Selecione uma data (opcional)</label>
                 <input 
                     type="date" 
                     id="search_date" 
