Updating log-in screen: link to LinkedIn

--- a/authors/templates/authors/partials/form_login.html
+++ b/authors/templates/authors/partials/form_login.html
@@ -6,7 +6,12 @@
                 <div class="retangulo-esquerda">
                     <div "text-left-card">
                         <h3 class="card-intro">Bem vindo de volta</h3>
-                        <h6 class="card-info">Acesse sua conta agora mesmo.</h6>
+                        <h6 class="card-info">
+                            Quer saber como logar?
+                            <a href="https://www.linkedin.com/feed/update/urn:li:activity:7182150015765671936/" target="__blank">
+                                Acesse aqui <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </h6>
                     </div>
                     <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo-login">
                 </div>
